chore: update site

--- a/site/blockquote-base-meta/base.html
+++ b/site/blockquote-base-meta/base.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html><html lang="en"><head>
-    <title>Base - Demo blockquote-base-meta</title>
+    <title>Base - blockquote-base-meta</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <script src="./web_modules/@ungap/global-this/index.js"></script>
     <script src="./web_modules/tiny-array-flat-polyfill/tiny-array-flat-polyfill.min.js"></script>
+    <meta name="description" content="Demo Base - blockquote-base-meta">
     <style>
       :root {
         font: normal medium/1.25 sans-serif;
