--- a/site/blockquote-directive-svg-to-data-image/simple.html
+++ b/site/blockquote-directive-svg-to-data-image/simple.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <script src="./web_modules/@ungap/global-this/index.js"></script>
     <script src="./web_modules/tiny-array-flat-polyfill/tiny-array-flat-polyfill.min.js"></script>
+    <meta name="description" content="Demo Simple - blockquote-directive-svg-to-data-image">
     <style>
       :root {
         font: normal medium/1.25 sans-serif;
