--- a/site/blockquote-mixin-slot-content/index.html
+++ b/site/blockquote-mixin-slot-content/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <script src="./web_modules/@ungap/global-this/index.js"></script>
     <script src="./web_modules/tiny-array-flat-polyfill/tiny-array-flat-polyfill.min.js"></script>
+    <meta name="description" content="All Demos - blockquote-mixin-slot-content">
     <style>
       html,
       body {
