--- a/site/blockquote-directive-svg-to-data-image/base.html
+++ b/site/blockquote-directive-svg-to-data-image/base.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <script src="./web_modules/@ungap/global-this/index.js"></script>
     <script src="./web_modules/tiny-array-flat-polyfill/tiny-array-flat-polyfill.min.js"></script>
+    <meta name="description" content="Demo Base - blockquote-directive-svg-to-data-image">
     <style>
       :root {
         /* https://stackoverflow.com/questions/42330075/is-there-a-way-to-interpolate-css-variables-with-url#answer-42331003 */
