--- a/site/index.html
+++ b/site/index.html
@@ -1,7 +1,9 @@
-<!DOCTYPE html><html lang="en"><head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Blockquote - Web Components</title>
     <style>
       :root {
@@ -43,45 +45,109 @@
   </head>
   <body>
     <h1 class="title">Blockquote - Web Components</h1>
-    
+    <ol>
+      <li>
+        <ul>
+          <li>
+            <a href="blockquote-base-meta/index.html">• blockquote-base-meta</a>
+          </li>
+          <li>
+            <a
+              href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/base/blockquote-base-meta/README.md"
+              >• readme</a
+            >
+          </li>
+        </ul>
+      </li>
+      <li>
+        <ul>
+          <li>
+            <a href="blockquote-base-embedded-webview/index.html"
+              >• blockquote-base-embedded-webview</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/base/blockquote-base-embedded-webview/README.md"
+              >• readme</a
+            >
+          </li>
+        </ul>
+      </li>
+      <li>
+        <ul>
+          <li><a href="blockquote-tabs/index.html">• blockquote-tabs</a></li>
+          <li>
+            <a
+              href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/components/blockquote-tabs/README.md"
+              >• readme</a
+            >
+          </li>
+        </ul>
+      </li>
+      <li>
+        <ul>
+          <li>
+            <a href="blockquote-directive-svg-to-data-image/index.html"
+              >• blockquote-directive-svg-to-data-image</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/directives/blockquote-directive-svg-to-data-image/README.md"
+              >• readme</a
+            >
+          </li>
+        </ul>
+      </li>
+      <li>
+        <ul>
+          <li>
+            <a href="blockquote-base-style-helpers/index.html"
+              >• blockquote-base-style-helpers</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/base/blockquote-base-style-helpers/README.md"
+              >• readme</a
+            >
+          </li>
+        </ul>
+      </li>
+      <li>
+        <ul>
+          <li>
+            <a href="blockquote-mixin-slot-content/index.html"
+              >• blockquote-mixin-slot-content</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/mixins/blockquote-mixin-slot-content/README.md"
+              >• readme</a
+            >
+          </li>
+        </ul>
+      </li>
+      <li>
+        <ul>
+          <li>
+            <a href="blockquote-controller-rxjs/index.html"
+              >• blockquote-controller-rxjs</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/controllers/blockquote-controller-rxjs/README.md"
+              >• readme</a
+            >
+          </li>
+        </ul>
+      </li>
+    </ol>
     <p>
       <a href="playground-dev/index.html">• playground-dev</a>
     </p>
-  
-
-<ol><li>
-          <ul>
-            <li><a href="blockquote-controller-rxjs/index.html">• blockquote-controller-rxjs</a></li>
-            <li><a href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/controllers/blockquote-controller-rxjs/README.md">• readme</a></li>
-          </ul>
-        </li><li>
-          <ul>
-            <li><a href="blockquote-base-style-helpers/index.html">• blockquote-base-style-helpers</a></li>
-            <li><a href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/base/blockquote-base-style-helpers/README.md">• readme</a></li>
-          </ul>
-        </li><li>
-          <ul>
-            <li><a href="blockquote-directive-svg-to-data-image/index.html">• blockquote-directive-svg-to-data-image</a></li>
-            <li><a href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/directives/blockquote-directive-svg-to-data-image/README.md">• readme</a></li>
-          </ul>
-        </li><li>
-          <ul>
-            <li><a href="blockquote-base-embedded-webview/index.html">• blockquote-base-embedded-webview</a></li>
-            <li><a href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/base/blockquote-base-embedded-webview/README.md">• readme</a></li>
-          </ul>
-        </li><li>
-          <ul>
-            <li><a href="blockquote-mixin-slot-content/index.html">• blockquote-mixin-slot-content</a></li>
-            <li><a href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/mixins/blockquote-mixin-slot-content/README.md">• readme</a></li>
-          </ul>
-        </li><li>
-          <ul>
-            <li><a href="blockquote-tabs/index.html">• blockquote-tabs</a></li>
-            <li><a href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/components/blockquote-tabs/README.md">• readme</a></li>
-          </ul>
-        </li><li>
-          <ul>
-            <li><a href="blockquote-base-meta/index.html">• blockquote-base-meta</a></li>
-            <li><a href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/base/blockquote-base-meta/README.md">• readme</a></li>
-          </ul>
-        </li></ol></body></html>
+  </body>
+</html>
