chore: update site

--- a/site/ajax-provider/index.html
+++ b/site/ajax-provider/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html><html lang="en"><head>
-    <title>Demo - blockquote-tabs</title>
+    <title>Demo - ajax-provider</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
         <script src="./web_modules/@ungap/global-this/index.js"></script>
-    <meta name="description" content="All Demos - blockquote-tabs">
-    <meta name="description" content="blockquote-tabs">
+    <meta name="description" content="All Demos - ajax-provider">
     <style>
       html,
       body {
@@ -15,11 +14,11 @@
     </style>
   </head>
   <body>
-    <blockquote-base-embedded-webview heading="blockquote-tabs" screen-size-selected="6">
+    <blockquote-base-embedded-webview screen-size-selected="5" heading="ajax-provider">
       <template data-src="./base.html" data-option="Base"></template>
-      <template data-src="./autofocus.html" data-option="Autofocus"></template>
+      <template data-src="./dm-currecies.html" data-option="Data manager"></template>
     </blockquote-base-embedded-webview>
     
   
 
-<script type="module" src="./assets/inline-module-afc12870e222c2d823cdbcdc63d14554-857b2d2b.js"></script></body></html>
+<script type="module" src="./assets/inline-module-afc12870e222c2d823cdbcdc63d14554-ce5b2eac.js"></script></body></html>
