--- a/packages/base/ajax-provider/demo/base.html
+++ b/packages/base/ajax-provider/demo/base.html
@@ -1,4 +1,3 @@
-<!-- eslint-disable import/no-extraneous-dependencies -->
 <!doctype html>
 <html lang="en">
   <head>
@@ -19,6 +18,7 @@
     <ajax-provider-component></ajax-provider-component>
 
     <script type="module">
+      // eslint-disable-next-line import/no-extraneous-dependencies
       import { LitElement, html, css } from 'lit';
       // eslint-disable-next-line import/no-extraneous-dependencies
       import '@alenaksu/json-viewer/json-viewer.js';
