chore: update site

--- a/site/ajax-provider/base.html
+++ b/site/ajax-provider/base.html
@@ -1,4 +1,4 @@
-<!-- eslint-disable import/no-extraneous-dependencies --><!DOCTYPE html><html lang="en"><head>
+<!DOCTYPE html><html lang="en"><head>
     <title>Demo - ajax-provider</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
@@ -19,4 +19,4 @@
     
   
 
-<script type="module" src="./assets/inline-module-8c4c525ccc9af86dee40965979229d88-295407b3.js"></script></body></html>
+<script type="module" src="./assets/inline-module-cae878eae55d9aea1d8e7a9ae2785903-DZNvo-up.js"></script></body></html>
