--- a/site/playground-dev/index.html
+++ b/site/playground-dev/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script type="module" src="./index.js"></script>
+    <script type="module" src="./index-playground.js"></script>
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <playground-ide
-      html-file="base.html"
+      html-file="html-file.html"
       project-src="playground.json"
       line-numbers
       line-wrapping
