chore: update site

--- a/site/index.html
+++ b/site/index.html
@@ -65,12 +65,10 @@
     <ol>
       <li>
         <ul>
-          <li>
-            <a href="blockquote-base-meta/index.html">⇉ blockquote-base-meta</a>
-          </li>
+          <li><a href="blockquote-tabs/index.html">⇉ blockquote-tabs</a></li>
           <li>
             <a
-              href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/base/blockquote-base-meta/README.md"
+              href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/components/blockquote-tabs/README.md"
               >↬ readme</a
             >
           </li>
@@ -93,10 +91,14 @@
       </li>
       <li>
         <ul>
-          <li><a href="blockquote-tabs/index.html">⇉ blockquote-tabs</a></li>
+          <li>
+            <a href="blockquote-controller-xstate/index.html"
+              >⇉ blockquote-controller-xstate</a
+            >
+          </li>
           <li>
             <a
-              href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/components/blockquote-tabs/README.md"
+              href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/controllers/blockquote-controller-xstate/README.md"
               >↬ readme</a
             >
           </li>
@@ -112,6 +114,21 @@
           <li>
             <a
               href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/controllers/blockquote-controller-rxjs/README.md"
+              >↬ readme</a
+            >
+          </li>
+        </ul>
+      </li>
+      <li>
+        <ul>
+          <li>
+            <a href="blockquote-mixin-slot-content/index.html"
+              >⇉ blockquote-mixin-slot-content</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/mixins/blockquote-mixin-slot-content/README.md"
               >↬ readme</a
             >
           </li>
@@ -150,13 +167,11 @@
       <li>
         <ul>
           <li>
-            <a href="blockquote-mixin-slot-content/index.html"
-              >⇉ blockquote-mixin-slot-content</a
-            >
+            <a href="blockquote-base-meta/index.html">⇉ blockquote-base-meta</a>
           </li>
           <li>
             <a
-              href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/mixins/blockquote-mixin-slot-content/README.md"
+              href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/base/blockquote-base-meta/README.md"
               >↬ readme</a
             >
           </li>
