--- a/site/blockquote-controller-xstate/base.html
+++ b/site/blockquote-controller-xstate/base.html
@@ -28,10 +28,17 @@
   </head>
   <body>
     <main>
-      <h1 class="sr-only">blockquote-controller-rxjs-demo</h1>
-      <blockquote-controller-rxjs-demo></blockquote-controller-rxjs-demo>
+      <h1 class="sr-only">blockquote-controller-xstate-demo</h1>
+      <xstate-counter>
+        <h1>
+          State machine with
+          <a target="_blank" rel="noopener noreferrer" href="https://stately.ai/docs/installation">XState</a>
+          and
+          <a href="https://lit.dev/docs/composition/controllers/" target="_blank" rel="noopener noreferrer">Lit Controller</a>
+        </h1>
+      </xstate-counter>
     </main>
     
   
 
-<script type="module" src="./assets/inline-module-4ad152a15328129e57f6057ccfd641b7-ianLIikD.js"></script></body></html>
+<script type="module" src="./assets/xstate-counter-ZLJCxPoa.js"></script></body></html>
