--- a/packages/base/ajax-provider/demo/dm-currecies.html
+++ b/packages/base/ajax-provider/demo/dm-currecies.html
@@ -4,7 +4,7 @@
     <title>Demo - ajax-provider</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
-    <meta name="description" content="ajax-provider" />
+    <meta name="description" content="Demo DM currencies - ajax-provider" />
     <style>
       html,
       body {
