chore: update site

--- a/site/ajax-provider/base.html
+++ b/site/ajax-provider/base.html
@@ -2,8 +2,7 @@
     <title>Demo - ajax-provider</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-        <script src="./web_modules/@ungap/global-this/index.js"></script>
-    <meta name="description" content="ajax-provider">
+    <meta name="description" content="Demo Base - ajax-provider">
     <style>
       html,
       body {
