--- a/site/blockquote-controller-xstate/base.html
+++ b/site/blockquote-controller-xstate/base.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html><html lang="en"><head>
     <meta charset="utf-8">
-        <script src="./web_modules/@ungap/global-this/index.js"></script>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Demo Base - blockquote-controller-xstate">
     <title>Base - blockquote-controller-rxjs</title>
     <style>
       :root {
