--- a/site/index.html
+++ b/site/index.html
@@ -3,10 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
-    <meta
-      name="description"
-      content="All Demos - blockquote-web-components"
-    />
+    <meta name="description" content="All Demos - blockquote-web-components" />
     <title>Blockquote - Web Components</title>
     <style>
       :root {
@@ -70,13 +67,13 @@
       <li>
         <ul>
           <li>
-            <a href="blockquote-controller-xstate/index.html"
-              >⇉ blockquote-controller-xstate</a
+            <a href="blockquote-base-embedded-webview/index.html"
+              >⇉ blockquote-base-embedded-webview</a
             >
           </li>
           <li>
             <a
-              href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/controllers/blockquote-controller-xstate/README.md"
+              href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/base/blockquote-base-embedded-webview/README.md"
               >↬ readme</a
             >
           </li>
@@ -97,6 +94,21 @@
       </li>
       <li>
         <ul>
+          <li>
+            <a href="blockquote-base-style-helpers/index.html"
+              >⇉ blockquote-base-style-helpers</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/base/blockquote-base-style-helpers/README.md"
+              >↬ readme</a
+            >
+          </li>
+        </ul>
+      </li>
+      <li>
+        <ul>
           <li><a href="blockquote-tabs/index.html">⇉ blockquote-tabs</a></li>
           <li>
             <a
@@ -109,28 +121,13 @@
       <li>
         <ul>
           <li>
-            <a href="blockquote-mixin-slot-content/index.html"
-              >⇉ blockquote-mixin-slot-content</a
+            <a href="blockquote-controller-rxjs/index.html"
+              >⇉ blockquote-controller-rxjs</a
             >
           </li>
           <li>
             <a
-              href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/mixins/blockquote-mixin-slot-content/README.md"
-              >↬ readme</a
-            >
-          </li>
-        </ul>
-      </li>
-      <li>
-        <ul>
-          <li>
-            <a href="blockquote-base-style-helpers/index.html"
-              >⇉ blockquote-base-style-helpers</a
-            >
-          </li>
-          <li>
-            <a
-              href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/base/blockquote-base-style-helpers/README.md"
+              href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/controllers/blockquote-controller-rxjs/README.md"
               >↬ readme</a
             >
           </li>
@@ -154,13 +151,13 @@
       <li>
         <ul>
           <li>
-            <a href="blockquote-base-embedded-webview/index.html"
-              >⇉ blockquote-base-embedded-webview</a
+            <a href="blockquote-controller-xstate/index.html"
+              >⇉ blockquote-controller-xstate</a
             >
           </li>
           <li>
             <a
-              href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/base/blockquote-base-embedded-webview/README.md"
+              href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/controllers/blockquote-controller-xstate/README.md"
               >↬ readme</a
             >
           </li>
@@ -169,13 +166,13 @@
       <li>
         <ul>
           <li>
-            <a href="blockquote-controller-rxjs/index.html"
-              >⇉ blockquote-controller-rxjs</a
+            <a href="blockquote-mixin-slot-content/index.html"
+              >⇉ blockquote-mixin-slot-content</a
             >
           </li>
           <li>
             <a
-              href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/controllers/blockquote-controller-rxjs/README.md"
+              href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/mixins/blockquote-mixin-slot-content/README.md"
               >↬ readme</a
             >
           </li>
