--- a/packages/directives/blockquote-directive-svg-to-data-image/demo/simple.html
+++ b/packages/directives/blockquote-directive-svg-to-data-image/demo/simple.html
@@ -54,7 +54,7 @@
               width: 6.25rem;
               height: 6.25rem;
               border-radius: 50%;
-              background: center center / cover no-repeat;
+              background: center center / calc(100% - 2rem) no-repeat;
             }
 
             /*
@@ -83,41 +83,18 @@
         }
 
         get _svgTag() {
-          return html` <svg
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 100 100"
-            enable-background="new 0 0 100 100"
-            xml:space="preserve"
-            height="100px"
-            width="100px"
-          >
-            <g>
+          return html`
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              focusable="false"
+              role="presentation"
+              viewBox="0 0 32.54 37.5"
+            >
               <path
-                d="M28.1,36.6c4.6,1.9,12.2,1.6,20.9,1.1c8.9-0.4,19-0.9,28.9,0.9c6.3,1.2,11.9,3.1,16.8,6c-1.5-12.2-7.9-23.7-18.6-31.3 c-4.9-0.2-9.9,0.3-14.8,1.4C47.8,17.9,36.2,25.6,28.1,36.6z"
+                d="M11.5 33.5v-1H11c-.3 0-.5-.2-.5-.5s.2-.5.5-.5h.5v-2h10v2h.5c.3 0 .5.2.5.5s-.2.5-.5.5h-.5v1h.5c.3 0 .5.2.5.5s-.2.5-.5.5h-.5s-1.4 3-5 3-5-3-5-3H11c-.3 0-.5-.2-.5-.5s.2-.5.5-.5h.5Zm1 0h8v-1h-8v1Zm.2 1c.2.3.4.5.7.8.8.8 1.9 1.2 3.2 1.2s2.3-.5 3.2-1.2c.3-.2.5-.5.7-.8h-7.8Zm-.2-3h8v-1h-8v1ZM8.6 2.3c-.1-.2 0-.5.2-.7.2-.1.5 0 .7.2L11.1 5c.1.2 0 .5-.2.7-.2.1-.5 0-.7-.2L8.6 2.3Zm14.1-.4c.1-.2.4-.4.7-.2.2.1.4.4.2.7L22 5.5c-.1.2-.4.4-.7.2-.2-.1-.4-.4-.2-.7 0 .1 1.6-3.1 1.6-3.1ZM15.6.5c0-.3.2-.5.5-.5s.5.2.5.5v3.2c0 .3-.2.5-.5.5s-.5-.2-.5-.5V.5ZM3.3 6.4c-.2-.2-.2-.5 0-.7s.5-.2.7 0l2.3 2.4c.2.2.2.5 0 .7s-.5.2-.7 0L3.3 6.4ZM.4 12.2c-.3-.1-.4-.3-.4-.6.1-.3.3-.4.6-.4l3.1.8c.3.1.4.3.4.6-.1.3-.3.4-.6.4l-3.1-.8Zm31.8 0-3.1.8c-.3.1-.5-.1-.6-.4s.1-.5.3-.6l3.1-.8c.3-.1.5.1.6.4s0 .5-.3.6Zm-4-6.4c.2-.2.5-.2.7 0s.2.5 0 .7l-2.3 2.4c-.2.2-.5.2-.7 0s-.2-.5 0-.7l2.3-2.4ZM11.3 28.5c0-5.5-4.8-5.5-4.8-12.6 0-5 4.5-9.4 10-9.4s10 4.4 10 9.4c0 7.1-4.8 7.1-4.8 12.6H11.3Zm9.4-1c.2-1.8.8-3 2.1-4.7l.4-.6c1.6-2.1 2.2-3.5 2.2-6.3 0-4.5-4.1-8.4-9-8.4s-9 3.9-9 8.4c0 2.7.6 4.2 2.2 6.3l.4.6c1.3 1.7 1.9 3 2.1 4.7h8.6Zm-6.8-17.1c.3-.1.5.1.6.3.1.2 0 .5-.3.6-1.8.7-3.2 2.2-3.9 4-.1.3-.4.4-.6.3s-.4-.4-.3-.6c.7-2.1 2.4-3.8 4.5-4.6Z"
               />
-              <path
-                d="M70.3,9.8C57.5,3.4,42.8,3.6,30.5,9.5c-3,6-8.4,19.6-5.3,24.9c8.6-11.7,20.9-19.8,35.2-23.1C63.7,10.5,67,10,70.3,9.8z"
-              />
-              <path
-                d="M16.5,51.3c0.6-1.7,1.2-3.4,2-5.1c-3.8-3.4-7.5-7-11-10.8c-2.1,6.1-2.8,12.5-2.3,18.7C9.6,51.1,13.4,50.2,16.5,51.3z"
-              />
-              <path
-                d="M9,31.6c3.5,3.9,7.2,7.6,11.1,11.1c0.8-1.6,1.7-3.1,2.6-4.6c0.1-0.2,0.3-0.4,0.4-0.6c-2.9-3.3-3.1-9.2-0.6-17.6 c0.8-2.7,1.8-5.3,2.7-7.4c-5.2,3.4-9.8,8-13.3,13.7C10.8,27.9,9.8,29.7,9,31.6z"
-              />
-              <path
-                d="M15.4,54.7c-2.6-1-6.1,0.7-9.7,3.4c1.2,6.6,3.9,13,8,18.5C13,69.3,13.5,61.8,15.4,54.7z"
-              />
-              <path
-                d="M39.8,57.6C54.3,66.7,70,73,86.5,76.4c0.6-0.8,1.1-1.6,1.7-2.5c4.8-7.7,7-16.3,6.8-24.8c-13.8-9.3-31.3-8.4-45.8-7.7 c-9.5,0.5-17.8,0.9-23.2-1.7c-0.1,0.1-0.2,0.3-0.3,0.4c-1,1.7-2,3.4-2.9,5.1C28.2,49.7,33.8,53.9,39.8,57.6z"
-              />
-              <path
-                d="M26.2,88.2c3.3,2,6.7,3.6,10.2,4.7c-3.5-6.2-6.3-12.6-8.8-18.5c-3.1-7.2-5.8-13.5-9-17.2c-1.9,8-2,16.4-0.3,24.7 C20.6,84.2,23.2,86.3,26.2,88.2z"
-              />
-              <path
-                d="M30.9,73c2.9,6.8,6.1,14.4,10.5,21.2c15.6,3,32-2.3,42.6-14.6C67.7,76,52.2,69.6,37.9,60.7C32,57,26.5,53,21.3,48.6 c-0.6,1.5-1.2,3-1.7,4.6C24.1,57.1,27.3,64.5,30.9,73z"
-              />
-            </g>
-          </svg>`;
+            </svg>
+          `;
         }
 
         render() {
