feat(blockquote-base-meta): add globalThis

--- a/packages/base/blockquote-base-meta/demo/base.html
+++ b/packages/base/blockquote-base-meta/demo/base.html
@@ -153,6 +153,7 @@
           key: keyInfoMap,
           value: 'foo/bar',
         });
+        console.info(myDefaultMap.mapList);
         console.info(myDefaultMap.byKey(keyInfoMap));
       </script>
     </main>
