feat(blockquote-mixin-slot-content): move index to src folder

--- a/packages/mixins/blockquote-mixin-slot-content/demo/base.html
+++ b/packages/mixins/blockquote-mixin-slot-content/demo/base.html
@@ -44,7 +44,7 @@
     </main>
     <script type="module">
       import { html, LitElement } from 'lit';
-      import { BlockquoteMixinSlotContent } from '../index.js';
+      import { BlockquoteMixinSlotContent } from '../src/index.js';
 
       const element = document.querySelector('slot-element');
       function generateRandomString(stringLength) {
