--- a/packages/mixins/blockquote-mixin-slot-content/demo/slots-on-the-fly.html
+++ b/packages/mixins/blockquote-mixin-slot-content/demo/slots-on-the-fly.html
@@ -60,7 +60,7 @@
     </main>
     <script type="module">
       import { html, LitElement } from 'lit';
-      import { BlockquoteMixinSlotContent } from '../index.js';
+      import { BlockquoteMixinSlotContent } from '../src/index.js';
 
       const element = document.querySelector('slot-element');
 
