--- a/packages/mixins/blockquote-mixin-slot-content/demo/composition-with-slots.html
+++ b/packages/mixins/blockquote-mixin-slot-content/demo/composition-with-slots.html
@@ -46,7 +46,7 @@
     </main>
     <script type="module">
       import { html, LitElement } from 'lit';
-      import { BlockquoteMixinSlotContent } from '../index.js';
+      import { BlockquoteMixinSlotContent } from '../src/index.js';
 
       const element = document.querySelector('slot-element');
 
