--- a/packages/directives/blockquote-directive-svg-to-data-image/demo/base.html
+++ b/packages/directives/blockquote-directive-svg-to-data-image/demo/base.html
@@ -39,7 +39,7 @@
 
     <script type="module">
       import { html, LitElement, css, svg } from 'lit';
-      import { blockquoteDirectiveSvgToDataImage } from '../index.js';
+      import { blockquoteDirectiveSvgToDataImage } from '../src/index.js';
 
       class BgElement extends LitElement {
         static get properties() {
