--- a/packages/directives/blockquote-directive-svg-to-data-image/demo/simple.html
+++ b/packages/directives/blockquote-directive-svg-to-data-image/demo/simple.html
@@ -36,7 +36,7 @@
 
     <script type="module">
       import { html, LitElement, css } from 'lit';
-      import { blockquoteDirectiveSvgToDataImage } from '../index.js';
+      import { blockquoteDirectiveSvgToDataImage } from '../src/index.js';
 
       class BgElement extends LitElement {
         static get styles() {
