feat(blockquote-controller-rxjs): move index to src folder

--- a/packages/controllers/blockquote-controller-rxjs/demo/base.html
+++ b/packages/controllers/blockquote-controller-rxjs/demo/base.html
@@ -35,7 +35,7 @@
     <script type="module">
       import { html, LitElement } from 'lit';
       import { map, fromEvent } from 'rxjs';
-      import { BlockquoteControllerRxjs } from '../index.js';
+      import { BlockquoteControllerRxjs } from '../src/index.js';
 
       class BlockquoteControllerRxjsDemo extends LitElement {
         static get is() {
