feat(blockquote-base-style-helpers): move index to src folder

--- a/packages/base/blockquote-base-style-helpers/demo/shared-styles.html
+++ b/packages/base/blockquote-base-style-helpers/demo/shared-styles.html
@@ -35,7 +35,7 @@
 
     <script type="module">
       import { LitElement, html, css } from 'lit';
-      import { getComponentSharedStyles, setComponentSharedStyles } from '../index.js';
+      import { getComponentSharedStyles, setComponentSharedStyles } from '../src/index.js';
 
       setComponentSharedStyles(
         'shared-element-shared-styles',
