feat(blockquote-base-meta): move index to src folder

--- a/packages/base/blockquote-base-meta/demo/base.html
+++ b/packages/base/blockquote-base-meta/demo/base.html
@@ -104,7 +104,7 @@
       </article>
 
       <script type="module">
-        import { BlockquoteBaseMeta } from '../index.js';
+        import { BlockquoteBaseMeta } from '../src/index.js';
 
         const myDefault = new BlockquoteBaseMeta({
           key: 'basic',
