--- a/packages/base/ajax-provider/demo/base.html
+++ b/packages/base/ajax-provider/demo/base.html
@@ -22,7 +22,7 @@
       import { LitElement, html, css } from 'lit';
       // eslint-disable-next-line import/no-extraneous-dependencies
       import '@alenaksu/json-viewer/json-viewer.js';
-      import { AjaxProvider } from '../index.js';
+      import { AjaxProvider } from '../src/index.js';
 
       class AjaxProviderComponent extends LitElement {
         static styles = css`
