--- a/site/index.html
+++ b/site/index.html
@@ -67,13 +67,11 @@
       <li>
         <ul>
           <li>
-            <a href="blockquote-base-embedded-webview/index.html"
-              >⇉ blockquote-base-embedded-webview</a
-            >
+            <a href="blockquote-base-meta/index.html">⇉ blockquote-base-meta</a>
           </li>
           <li>
             <a
-              href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/base/blockquote-base-embedded-webview/README.md"
+              href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/base/blockquote-base-meta/README.md"
               >↬ readme</a
             >
           </li>
@@ -82,11 +80,13 @@
       <li>
         <ul>
           <li>
-            <a href="blockquote-base-meta/index.html">⇉ blockquote-base-meta</a>
+            <a href="blockquote-base-embedded-webview/index.html"
+              >⇉ blockquote-base-embedded-webview</a
+            >
           </li>
           <li>
             <a
-              href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/base/blockquote-base-meta/README.md"
+              href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/base/blockquote-base-embedded-webview/README.md"
               >↬ readme</a
             >
           </li>
@@ -113,6 +113,21 @@
           <li>
             <a
               href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/components/blockquote-tabs/README.md"
+              >↬ readme</a
+            >
+          </li>
+        </ul>
+      </li>
+      <li>
+        <ul>
+          <li>
+            <a href="blockquote-controller-context-meta/index.html"
+              >⇉ blockquote-controller-context-meta</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/controllers/blockquote-controller-context-meta/README.md"
               >↬ readme</a
             >
           </li>
