chore: update site

--- a/site/blockquote-controller-context-meta/base.html
+++ b/site/blockquote-controller-context-meta/base.html
@@ -41,4 +41,4 @@
     
   
 
-<script type="module" src="./assets/my-app-BfvrpQPK.js"></script></body></html>
+<script type="module" src="./assets/my-app-aQC8IlhG.js"></script></body></html>
