chore: update site

--- a/site/blockquote-controller-context-meta/base.html
+++ b/site/blockquote-controller-context-meta/base.html
@@ -30,15 +30,19 @@
       <h1 class="sr-only">blockquote-controller-context-meta-demo</h1>
       <p>
         Example inspired by:
-        <a href="https://react.dev/learn/passing-data-deeply-with-context" target="_blank">https://react.dev/learn/passing-data-deeply-with-context</a>
+        <a href="https://react.dev/learn/passing-data-deeply-with-context" target="_blank">
+          https://react.dev/learn/passing-data-deeply-with-context
+        </a>
       </p>
       <p>
         Orginal example from lit.dev:
-        <a href="https://lit.dev/playground/#sample=examples/context-consume-provide" target="_blank">https://lit.dev/playground/#sample=examples/context-consume-provide</a>
+        <a href="https://lit.dev/playground/#sample=examples/context-consume-provide" target="_blank">
+          https://lit.dev/playground/#sample=examples/context-consume-provide
+        </a>
       </p>
       <my-app></my-app>
     </main>
     
   
 
-<script type="module" src="./assets/my-app-aQC8IlhG.js"></script></body></html>
+<script type="module" src="./assets/my-app-D54m7yKt.js"></script></body></html>
