--- a/site/blockquote-directive-ariaidref-slot/base.html
+++ b/site/blockquote-directive-ariaidref-slot/base.html
@@ -19,10 +19,13 @@
 
       <wrapper-dialog>
         <form method="dialog">
-          <div><button aria-label="close">X</button></div>
+          <div>
+            <button aria-label="close">X</button>
+          </div>
           <h2>Registration</h2>
           <p>
-            <label>Name:
+            <label>
+              Name:
               <input type="text" name="name" required="">
             </label>
           </p>
@@ -38,4 +41,4 @@
     
   
 
-<script type="module" src="./assets/inline-module-64bdbed42597b56dc58d39d9e8dea348-D-Od5hv8.js"></script></body></html>
+<script type="module" src="./assets/inline-module-64bdbed42597b56dc58d39d9e8dea348-CMGrl3DC.js"></script></body></html>
