--- a/site/blockquote-mixin-slot-content/composition-with-slots.html
+++ b/site/blockquote-mixin-slot-content/composition-with-slots.html
@@ -28,8 +28,10 @@
   <body>
     <main>
       <h1 class="sr-only">blockquote-mixin-slot-content</h1>
-      <slot-element><p slot="fullName">fullName: Commit Queue</p>
-        <span slot="firstName">firstName: Commit -</span><span slot="lastName">- lastName: Queue</span>
+      <slot-element>
+        <p slot="fullName">fullName: Commit Queue</p>
+        <span slot="firstName">firstName: Commit -</span>
+        <span slot="lastName">- lastName: Queue</span>
       </slot-element>
       <hr>
       <div class="actions">
@@ -40,4 +42,4 @@
     
   
 
-<script type="module" src="./assets/inline-module-1f72226afcc65298711db6b69d801ce7-DUq2oZbo.js"></script></body></html>
+<script type="module" src="./assets/inline-module-f3d9b7eafb6bd3c619ee5910d425dfa2-CvT7-_VO.js"></script></body></html>
