--- a/site/blockquote-controller-xstate/base.html
+++ b/site/blockquote-controller-xstate/base.html
@@ -29,15 +29,19 @@
     <main>
       <h1 class="sr-only">blockquote-controller-xstate-demo</h1>
       <xstate-counter>
-        <h1>
+        <div>
           State machine with
-          <a target="_blank" rel="noopener noreferrer" href="https://stately.ai/docs/installation">XState</a>
+          <a target="_blank" rel="noopener noreferrer" href="https://stately.ai/docs/installation">
+            XState
+          </a>
           and
-          <a href="https://lit.dev/docs/composition/controllers/" target="_blank" rel="noopener noreferrer">Lit Controller</a>
-        </h1>
+          <a href="https://lit.dev/docs/composition/controllers/" target="_blank" rel="noopener noreferrer">
+            Lit Controller
+          </a>
+        </div>
       </xstate-counter>
     </main>
     
   
 
-<script type="module" src="./assets/xstate-counter-zO5Ulq2B.js"></script></body></html>
+<script type="module" src="./assets/xstate-counter-VuZD0Y9i.js"></script></body></html>
