--- a/site/blockquote-tabs/base.html
+++ b/site/blockquote-tabs/base.html
@@ -41,16 +41,38 @@
         <blockquote-tab id="tab-8">Tab 8</blockquote-tab>
         <blockquote-tab id="tab-9">Tab 9</blockquote-tab>
         <blockquote-tab id="tab-10">Tab 10</blockquote-tab>
-        <blockquote-tabpanel aria-labelledby="tab-1"><p>Panel 1</p></blockquote-tabpanel>
-        <blockquote-tabpanel aria-labelledby="tab-2"><p>Panel 2</p></blockquote-tabpanel>
-        <blockquote-tabpanel aria-labelledby="tab-3"><p><button>Panel 3</button></p></blockquote-tabpanel>
-        <blockquote-tabpanel aria-labelledby="tab-4"><p>Panel 4</p></blockquote-tabpanel>
-        <blockquote-tabpanel aria-labelledby="tab-5"><p>Panel 5</p></blockquote-tabpanel>
-        <blockquote-tabpanel aria-labelledby="tab-6"><p>Panel 6</p></blockquote-tabpanel>
-        <blockquote-tabpanel aria-labelledby="tab-7"><p>Panel 7</p></blockquote-tabpanel>
-        <blockquote-tabpanel aria-labelledby="tab-8"><p>Panel 8</p></blockquote-tabpanel>
-        <blockquote-tabpanel aria-labelledby="tab-9"><p>Panel 9</p></blockquote-tabpanel>
-        <blockquote-tabpanel aria-labelledby="tab-10"><p>Panel 10</p></blockquote-tabpanel>
+        <blockquote-tabpanel aria-labelledby="tab-1">
+          <p>Panel 1</p>
+        </blockquote-tabpanel>
+        <blockquote-tabpanel aria-labelledby="tab-2">
+          <p>Panel 2</p>
+        </blockquote-tabpanel>
+        <blockquote-tabpanel aria-labelledby="tab-3">
+          <p>
+            <button>Panel 3</button>
+          </p>
+        </blockquote-tabpanel>
+        <blockquote-tabpanel aria-labelledby="tab-4">
+          <p>Panel 4</p>
+        </blockquote-tabpanel>
+        <blockquote-tabpanel aria-labelledby="tab-5">
+          <p>Panel 5</p>
+        </blockquote-tabpanel>
+        <blockquote-tabpanel aria-labelledby="tab-6">
+          <p>Panel 6</p>
+        </blockquote-tabpanel>
+        <blockquote-tabpanel aria-labelledby="tab-7">
+          <p>Panel 7</p>
+        </blockquote-tabpanel>
+        <blockquote-tabpanel aria-labelledby="tab-8">
+          <p>Panel 8</p>
+        </blockquote-tabpanel>
+        <blockquote-tabpanel aria-labelledby="tab-9">
+          <p>Panel 9</p>
+        </blockquote-tabpanel>
+        <blockquote-tabpanel aria-labelledby="tab-10">
+          <p>Panel 10</p>
+        </blockquote-tabpanel>
       </blockquote-tabs>
     </main>
     
@@ -59,4 +81,4 @@
     </script>
   
 
-<script type="module" src="./assets/blockquote-tabs-Ck1vMvqK.js"></script></body></html>
+<script type="module" src="./assets/blockquote-tabs-CXYH99L1.js"></script></body></html>
