--- a/packages/mixins/blockquote-mixin-slot-content/demo/index.html
+++ b/packages/mixins/blockquote-mixin-slot-content/demo/index.html
@@ -4,6 +4,7 @@
     <title>Demo - blockquote-mixin-slot-content</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
+    <link rel="icon" href="favicon.svg" sizes="any" type="image/svg+xml" />
     <meta name="description" content="All Demos - blockquote-mixin-slot-content" />
     <style>
       html,
