--- a/packages/mixins/blockquote-mixin-slot-content/demo/slots-on-the-fly.html
+++ b/packages/mixins/blockquote-mixin-slot-content/demo/slots-on-the-fly.html
@@ -4,6 +4,7 @@
     <title>Slots on the fly - blockquote-mixin-slot-content</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
+    <link rel="icon" href="favicon.svg" sizes="any" type="image/svg+xml" />
     <meta name="description" content="Demo Slots on the fly - blockquote-mixin-slot-content" />
     <style>
       :root {
