chore(blockquote-directive-ariaidref-slot): update favicon

--- a/packages/directives/blockquote-directive-ariaidref-slot/demo/base.html
+++ b/packages/directives/blockquote-directive-ariaidref-slot/demo/base.html
@@ -4,6 +4,7 @@
     <title>Demo - blockquote-directive-ariaidref-slot</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
+    <link rel="icon" href="favicon.svg" sizes="any" type="image/svg+xml" />
     <meta name="description" content="blockquote-directive-ariaidref-slot" />
     <style>
       html,
@@ -22,7 +23,7 @@
       <wrapper-dialog>
         <form method="dialog">
           <div>
-            <button aria-label="close">X</button>
+            <button formnovalidate aria-label="close">X</button>
           </div>
           <h2>Registration</h2>
           <p>
@@ -33,7 +34,7 @@
           </p>
 
           <p>
-            <button value="cancel" type="reset">Cancel</button>
+            <button value="cancel" type="reset">Clean</button>
             <button>Submit</button>
           </p>
         </form>
