--- a/packages/directives/blockquote-directive-ariaidref-slot/demo/index.html
+++ b/packages/directives/blockquote-directive-ariaidref-slot/demo/index.html
@@ -4,6 +4,7 @@
     <title>Demo - blockquote-directive-ariaidref-slot</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
+    <link rel="icon" href="favicon.svg" sizes="any" type="image/svg+xml" />
     <meta name="description" content="All Demos - blockquote-directive-ariaidref-slot" />
     <style>
       html,
