chore(blockquote-controller-rxjs): update favicon

--- a/packages/controllers/blockquote-controller-rxjs/demo/index.html
+++ b/packages/controllers/blockquote-controller-rxjs/demo/index.html
@@ -4,6 +4,7 @@
     <title>Demo - blockquote-controller-rxjs</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
+    <link rel="icon" href="favicon.svg" sizes="any" type="image/svg+xml" />
     <meta name="description" content="All Demos - blockquote-controller-rxjs" />
     <style>
       html,
