--- a/packages/controllers/blockquote-controller-context-meta/demo/base.html
+++ b/packages/controllers/blockquote-controller-context-meta/demo/base.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" href="favicon.svg" sizes="any" type="image/svg+xml" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Demo Base - blockquote-controller-context-meta" />
     <title>Base - blockquote-controller-context-meta</title>
