--- a/packages/base/ajax-provider/demo/index.html
+++ b/packages/base/ajax-provider/demo/index.html
@@ -4,6 +4,7 @@
     <title>Demo - ajax-provider</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
+    <link rel="icon" href="favicon.svg" sizes="any" type="image/svg+xml" />
     <meta name="description" content="All Demos - ajax-provider" />
     <style>
       html,
