chore: update site

--- a/site/blockquote-base-style-helpers/document-styles.html
+++ b/site/blockquote-base-style-helpers/document-styles.html
@@ -2,7 +2,7 @@
     <title>Document styles - blockquote-base-style-helpers</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <meta name="description" content="Demo Document styles - blockquote-base-style-helpers">
+    <link rel="icon" href="assets/favicon.svg" sizes="any" type="image/svg+xml">    <meta name="description" content="Demo Document styles - blockquote-base-style-helpers">
     <style>
       :root {
         font: normal medium/1.25 sans-serif;
