--- a/site/blockquote-controller-context-meta/index.html
+++ b/site/blockquote-controller-context-meta/index.html
@@ -2,6 +2,7 @@
     <title>Demo - blockquote-controller-context-meta</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
+    <link rel="icon" href="assets/favicon.svg" sizes="any" type="image/svg+xml">
     <meta name="description" content="All Demos - blockquote-controller-context-meta">
     <style>
       html,
