--- a/site/blockquote-directive-ariaidref-slot/base.html
+++ b/site/blockquote-directive-ariaidref-slot/base.html
@@ -2,6 +2,7 @@
     <title>Demo - blockquote-directive-ariaidref-slot</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
+    <link rel="icon" href="assets/favicon.svg" sizes="any" type="image/svg+xml">
     <meta name="description" content="blockquote-directive-ariaidref-slot">
     <style>
       html,
@@ -20,7 +21,7 @@
       <wrapper-dialog>
         <form method="dialog">
           <div>
-            <button aria-label="close">X</button>
+            <button formnovalidate="" aria-label="close">X</button>
           </div>
           <h2>Registration</h2>
           <p>
@@ -31,7 +32,7 @@
           </p>
 
           <p>
-            <button value="cancel" type="reset">Cancel</button>
+            <button value="cancel" type="reset">Clean</button>
             <button>Submit</button>
           </p>
         </form>
@@ -41,4 +42,4 @@
     
   
 
-<script type="module" src="./assets/inline-module-64bdbed42597b56dc58d39d9e8dea348-CMGrl3DC.js"></script></body></html>
+<script type="module" src="./assets/inline-module-64bdbed42597b56dc58d39d9e8dea348-VpjtnfOc.js"></script></body></html>
