--- a/site/blockquote-controller-xstate/base.html
+++ b/site/blockquote-controller-xstate/base.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html><html lang="en"><head>
     <meta charset="utf-8">
+    <link rel="icon" href="assets/favicon.svg" sizes="any" type="image/svg+xml">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Demo Base - blockquote-controller-xstate">
     <title>Base - blockquote-controller-rxjs</title>
