--- a/packages/mixins/blockquote-mixin-slot-content/demo/base.html
+++ b/packages/mixins/blockquote-mixin-slot-content/demo/base.html
@@ -84,10 +84,10 @@
 
         connectedCallback() {
           super.connectedCallback && super.connectedCallback();
-          this.shadowRoot.addEventListener('slotchanges', this._onSlotChanges.bind(this));
+          this.shadowRoot.addEventListener('slotchanges', this._onSlotChanges);
         }
 
-        _onSlotChanges(ev) {
+        _onSlotChanges = ev => {
           const { detail } = ev;
           ev.stopPropagation();
           ev.preventDefault();
@@ -97,7 +97,7 @@
           this.originalCounter = this._originalContentSlots.length;
           console.info(detail);
           console.info('assignedNodes ==>', this._contentSlots);
-        }
+        };
 
         render() {
           return html`
