--- a/packages/mixins/blockquote-mixin-slot-content/demo/composition-with-slots.html
+++ b/packages/mixins/blockquote-mixin-slot-content/demo/composition-with-slots.html
@@ -69,16 +69,16 @@
       class slotElement extends BlockquoteMixinSlotContent(LitElement) {
         connectedCallback() {
           super.connectedCallback && super.connectedCallback();
-          this.shadowRoot.addEventListener('slotchanges', this._onSlotChanges.bind(this));
+          this.shadowRoot.addEventListener('slotchanges', this._onSlotChanges);
         }
 
-        _onSlotChanges(ev) {
+        _onSlotChanges = ev => {
           const { detail } = ev;
           ev.stopPropagation();
           ev.preventDefault();
           console.info(detail);
           console.info('assignedNodes ==>', detail.assignedNodesContent.assignedNodes);
-        }
+        };
 
         render() {
           return html`
