--- a/packages/mixins/blockquote-mixin-slot-content/demo/base.html
+++ b/packages/mixins/blockquote-mixin-slot-content/demo/base.html
@@ -83,14 +83,12 @@
         }
 
         connectedCallback() {
-          super.connectedCallback && super.connectedCallback();
+          super.connectedCallback?.();
           this.shadowRoot.addEventListener('slotchanges', this._onSlotChanges);
         }
 
         _onSlotChanges = ev => {
           const { detail } = ev;
-          ev.stopPropagation();
-          ev.preventDefault();
           this._contentSlots = detail.assignedNodesContent.assignedNodes;
           this._originalContentSlots = detail.originalEvent.assignedNodes;
           this.counter = this._contentSlots.length;
