--- a/packages/mixins/blockquote-mixin-slot-content/demo/composition-with-slots.html
+++ b/packages/mixins/blockquote-mixin-slot-content/demo/composition-with-slots.html
@@ -68,14 +68,12 @@
 
       class slotElement extends BlockquoteMixinSlotContent(LitElement) {
         connectedCallback() {
-          super.connectedCallback && super.connectedCallback();
+          super.connectedCallback?.();
           this.shadowRoot.addEventListener('slotchanges', this._onSlotChanges);
         }
 
         _onSlotChanges = ev => {
           const { detail } = ev;
-          ev.stopPropagation();
-          ev.preventDefault();
           console.info(detail);
           console.info('assignedNodes ==>', detail.assignedNodesContent.assignedNodes);
         };
