--- a/packages/mixins/blockquote-mixin-slot-content/demo/slots-on-the-fly.html
+++ b/packages/mixins/blockquote-mixin-slot-content/demo/slots-on-the-fly.html
@@ -109,7 +109,7 @@
         }
 
         connectedCallback() {
-          super.connectedCallback && super.connectedCallback();
+          super.connectedCallback?.();
           this.shadowRoot.addEventListener('slotchanges', this._onSlotChanges);
         }
 
@@ -130,8 +130,6 @@
 
         _onSlotChanges = ev => {
           const { detail } = ev;
-          ev.stopPropagation();
-          ev.preventDefault();
           console.info(detail);
           console.info(
             'assignedNodes ==>',
