--- a/packages/mixins/blockquote-mixin-slot-content/demo/slots-on-the-fly.html
+++ b/packages/mixins/blockquote-mixin-slot-content/demo/slots-on-the-fly.html
@@ -106,11 +106,7 @@
         constructor() {
           super();
           this.slots = 0;
-        }
-
-        connectedCallback() {
-          super.connectedCallback?.();
-          this.shadowRoot.addEventListener('slotchanges', this._onSlotChanges);
+          this.addEventListener('slotchanges', this._onSlotChanges);
         }
 
         update(props) {
