--- a/packages/mixins/blockquote-mixin-slot-content/demo/base.html
+++ b/packages/mixins/blockquote-mixin-slot-content/demo/base.html
@@ -82,9 +82,9 @@
           };
         }
 
-        connectedCallback() {
-          super.connectedCallback?.();
-          this.shadowRoot.addEventListener('slotchanges', this._onSlotChanges);
+        constructor() {
+          super();
+          this.addEventListener('slotchanges', this._onSlotChanges);
         }
 
         _onSlotChanges = ev => {
